--- a/deploy.yml
+++ b/deploy.yml
@@ -5,14 +5,14 @@
   tasks:
     - name: Pull Docker image
       docker_image:
-        name: olyfaneva/front-end
+        name: olyfaneva/front-test
         tag: latest
         source: pull
 
     - name: Stop old container if running
       docker_container:
         name: front
-        image: olyfaneva/front-end:latest   # Ajout de l'image ici
+        image: olyfaneva/front-test:latest   # Ajout de l'image ici
         state: stopped
         restart_policy: no
 
@@ -24,7 +24,7 @@
     - name: Run new container
       docker_container:
         name: front-end
-        image: olyfaneva/front-end:latest
+        image: olyfaneva/front-test:latest
         state: started
         restart_policy: always
         ports:
